--- a/gestion-empleados-frontend/src/index.html
+++ b/gestion-empleados-frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Gestion Empleados</title>
+  <title>Gestión Empleados</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
